# rdict

./: .gitignore  .gitmodules  Cargo.toml  LICENCE  README.md
scripts/: download-json.sh
src/: lib.rs  main.rs
src/rdict/: download_json.rs  error.rs  format.rs  json_to_db.rs  mod.rs  search_word.rs  structs.rs  utils.rs
